--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "start": "ts-node ./src/index.ts",
+    "dev": "ts-node ./src/index.ts",
+    "start": "node ./build/index.js",
     "build": "tsc"
   },
   "devDependencies": {
