--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,1 +1,5 @@
-yarnPath: .yarn/releases/yarn-3.2.4.cjs
+compressionLevel: mixed
+
+enableGlobalCache: false
+
+yarnPath: .yarn/releases/yarn-4.1.1.cjs
